--- a/app-android/app/src/debug/res/values/strings.xml
+++ b/app-android/app/src/debug/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Tuta-D</string>
+    <string name="app_name" translatable="false">Tuta-D</string>
 </resources>
